# anyway_save

./: .gitattributes  .gitignore  a.txt
Codes/OpenCR/include/turtlebot3/: turtlebot3_motor_driver.h
Codes/OpenCR/src/turtlebot3/: turtlebot3.cpp  turtlebot3_motor_driver.cpp
Codes/QT/final_project/: CMakeLists.txt  icon.qrc  package.xml  palette.xml
Codes/QT/final_project/.qtcreator/: CMakeLists.txt.user.1a8cb15  CMakeLists.txt.user.6261896
Codes/QT/final_project/src/: main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  map_callback.cpp  map_callback.h  mapnode.cpp  mapnode.h  pose_callback.cpp  pose_callback.h  rosnode.cpp  rosnode.h
Codes/custom_interfaces/: CMakeLists.txt  package.xml
Codes/custom_interfaces/msg/: Person.msg
Codes/d435_node/: package.xml
Codes/d435_node/d435_node/: d435_node.py
Codes/dispenser_node/: setup.py
Codes/person_tracker_node/: package.xml  setup.cfg  setup.py
Codes/person_tracker_node/person_tracker_node/: person_tracker_node.py
Codes/raspberry pi robot_ws/install/: setup.sh
Codes/raspberry pi robot_ws/install/coin_d4_driver/include/coin_d4_driver/: coin_d4_base_handler.hpp  coin_d4_lifecycle_handler.hpp  coin_d4_node_handler.hpp  multi_coin_d4_node.hpp  single_coin_d4_node.hpp
Codes/raspberry pi robot_ws/install/coin_d4_driver/lib/coin_d4_driver/: multi_coin_d4_node  (+1 more)
Codes/raspberry pi robot_ws/log/: latest_build
Codes/raspberry pi robot_ws/src/d435_node/: setup.cfg
Codes/raspberry pi robot_ws/src/d435_node/d435_node/: d435_node.py
Codes/turtlebot100 backup/: .Xauthority  .viminfo  .wget-hsts  servo_test.py
Codes/turtlebot100 backup/.docker/: .token_seed
Codes/turtlebot100 backup/.docker/buildx/: .buildNodeID
Codes/turtlebot100 backup/.docker/buildx/activity/: default
Codes/turtlebot100 backup/.ros/log/2026-03-18-17-15-20-616850-turtlebot100-1567/: .launch.log.swp
Codes/turtlebot100 backup/.ssh/: authorized_keys
Codes/turtlebot100 backup/.vim/: .netrwhist
Codes/turtlebot100 backup/.vscode-server/cli/servers/: lru.json
Codes/turtlebot100 backup/.vscode-server/data/: machineid
Codes/turtlebot100 backup/.vscode-server/extensions/: extensions.json
Codes/turtlebot100 backup/.vscode-server/extensions/github.copilot-chat-0.38.2/: .vsixmanifest  ThirdPartyNotices.txt  changelog.md  package.json  package.nls.cs.json  package.nls.de.json  package.nls.es.json  package.nls.fr.json  package.nls.it.json  package.nls.ja.json  package.nls.json  package.nls.ko.json  package.nls.pl.json  package.nls.pt-br.json  package.nls.qps-ploc.json  package.nls.ru.json  package.nls.tr.json  package.nls.zh-cn.json  package.nls.zh-tw.json  telemetry.json
Codes/turtlebot100 backup/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Codes/turtlebot100 backup/turtlebot3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Codes/turtlebot100 backup/turtlebot3_ws/src/: dispenser_node.tar
Codes/turtlebot100 backup/turtlebot3_ws/src/d435_node/: setup.py
Codes/turtlebot100 backup/turtlebot3_ws/src/dispenser_node/: package.xml  setup.cfg
Codes/turtlebot100 backup/turtlebot3_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Codes/turtlebot100 backup/turtlebot3_ws/src/turtlebot_launch/: CMakeLists.txt
Documents/Trouble shooting/: trouble shooting template.txt
(+241 files in other folders)
